--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		color: #00B7FF;
 	}
 	#map { height: 500px; }
+	.loadie {
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-color: #000;
+		width: 0;
+		height: 4px;
+		-webkit-transition: width 0.5s ease-out;
+		box-shadow: 0px 1px 5px rgba(0,0,0,0.25);
+	}
 	</style>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 </head>
@@ -21,6 +31,7 @@
 	<div id="map"></div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
+	<script src="js/jquery.loadie.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
