--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	a {
 		color: #00B7FF;
 	}
-	#map { height: 500px; }
+	#map { height: 600px; }
 	.loadie {
 		position: absolute;
 		top: 0;
@@ -49,7 +49,7 @@
   	<nav class="navbar navbar-default navbar-static-top" role="navigation">
   		<div class="container">
   			<div class="navbar-header">
-  				<a class="navbar-brand" href="#">Mapa</a>
+  				<a class="navbar-brand" href="#">Informe SSP</a>
   			</div>
   		</div>
   	</nav>
