--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
         <hr>
         <img src="https://github.com/andresatencio/cosas/raw/master/LineaMT.png" alt="Linea MT"> Linea MT
         <hr>
-        <img src="https://github.com/andresatencio/cosas/raw/master/LineaMTproyectada.png" alt="Linea MT Proyectada"> Linea MT Proyectada
+        <img src="https://github.com/andresatencio/cosas/raw/master/LineaMTproyectada.png" alt="Linea MT en ejecucion"> Linea MT en ejecucion
         <hr>
         <img src="https://github.com/andresatencio/cosas/raw/master/ZonaInfluencia.png" alt="Zona influencia CT"> Zona influencia CT
         <hr>
         <img src="https://github.com/andresatencio/cosas/raw/master/CorrimientoDeCarga.png" alt="Pasaje de carga"> Pasaje de carga
 
-        
+
       </div>
     </div>
-    
+
   </div>
   <div class="col-md-8">
     <div class="panel panel-default">
@@ -96,7 +96,7 @@
       <div id="map"></div>
     </div>
   </div>
-  
+
 </div>
 </div>
 
